; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_exit.c_notify_if_stopped.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_exit.c_notify_if_stopped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i32 }

@_EFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.task*, i64)* @notify_if_stopped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @notify_if_stopped(%struct.task* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.task*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.task* %0, %struct.task** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load %struct.task*, %struct.task** %4, align 8
  %8 = getelementptr inbounds %struct.task, %struct.task* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %20

13:                                               ; preds = %2
  %14 = load %struct.task*, %struct.task** %4, align 8
  %15 = getelementptr inbounds %struct.task, %struct.task* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13, %2
  store i32 0, i32* %3, align 4
  br label %42

21:                                               ; preds = %13
  %22 = load %struct.task*, %struct.task** %4, align 8
  %23 = getelementptr inbounds %struct.task, %struct.task* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  store i64 %26, i64* %6, align 8
  %27 = load %struct.task*, %struct.task** %4, align 8
  %28 = getelementptr inbounds %struct.task, %struct.task* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  store i64 0, i64* %30, align 8
  %31 = load i64, i64* %5, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %41

33:                                               ; preds = %21
  %34 = load i64, i64* %5, align 8
  %35 = load i64, i64* %6, align 8
  %36 = call i64 @user_put(i64 %34, i64 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %33
  %39 = load i32, i32* @_EFAULT, align 4
  store i32 %39, i32* %3, align 4
  br label %42

40:                                               ; preds = %33
  br label %41

41:                                               ; preds = %40, %21
  store i32 1, i32* %3, align 4
  br label %42

42:                                               ; preds = %41, %38, %20
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i64 @user_put(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
